src/test/testFiles/invalid/semanticErrors/incompatibleTypesAssignment.manimdsl
let x: number = 2;
x = Stack<number>();